<resources>
    <string name="app_name" translatable="false">Vitorello</string>
    <string name="schedule">Programar:</string>
    <string name="minRate">TarifaMinima:</string>
    <string name="driver">Chofer:</string>
    <string name="number">Numero:</string>
    <string name="time">Tiempo:</string>
    <string name="rating">Calificacion:</string>
    <string name="car">Auto:</string>
    <string name="LogIn"><u>Inicia Sesion</u></string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="register"><u>Registrate</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Bienvenido!!</string>
    <string name="invalid_username">Nombre de usuario invalido</string>
    <string name="invalid_password">La contraseña debe coneter >5 caracteres</string>
    <string name="login_failed">Inicio Fallido</string>
    <string name="message_log">¿No se ha registrado? Registrate </string>
    <string name="Here">" Aqui."</string>
    <string name="now">Ahora</string>
    <string name="taxi">Taxi</string>
    <string name="bus">Bus</string>
    <string name="Delivery">Despensa</string>
    <string name="direction">Direccion:</string>
    <string name="notepay">NOTA: EL TIEMPO DE LLEGADA DEPENDERA DEL TIEMPO DE ESPERA AL PAGO</string>
    <string name="street">Calle: (Calle Independencia)</string>
    <string name="number_street">Numero: (#123)</string>
    <string name="colony">Colonia: (Colonia Centro)</string>
    <string name="CP">Codigo Postal: (C.P. 91000)</string>
    <string name="Country">Pais: (Mexico)</string>
    <string name="State">Estado: (Veracruz)</string>
    <string name="city">Ciudad: (Xalapa)</string>
    <string name="rate">Tarifa:</string>
    <string name="_0_00" translatable="false">$0.00</string>
    <string name="Pay">Pagar</string>
    <string name="card">Tarjeta</string>
    <string name="cardnum" translatable="false">****-****-****-4321</string>
    <string name="destiny">Destino</string>
    <string name="cuenta">Cuenta</string>
    <string name="name">Nombre de Usuario</string>
    <string name="forgotPassword"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="LogInError">Error al iniciar sesión</string>
    <string name="LogInSucces">Inicion sesada</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="pwdLenght">La contraseña debe tener al menos 8 caracteres</string>
    <string name="pwdUpperLower">La contraseña debe tenr mayusculas y minusculas</string>
    <string name="pwdDigit">La contraseña debe tenre al menos un numero</string>
    <string name="pwdSpecialChar">La contraseña debe tener un caracter especial</string>
    <string name="pwdNoWhitespace">La contraseña no debe tener espacios</string>
    <string name="pwdOnlyDigits">La contraseña no puede ser solo digitos</string>
    <string name="pwdOnlyLetters">La contraseña no puede ser solo letras</string>
    <string name="pwdValid">La contraseña funciona</string>
    <string name="pwdInvalid">La contraseña no funciona :(</string>
</resources>