<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etCalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        android:hint="@string/street"
        android:inputType="text"
        android:padding="4dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        android:hint="@string/number_street"
        android:inputType="text"
        android:padding="4dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etColonia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        android:hint="@string/colony"
        android:inputType="text"
        android:padding="4dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etCP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        android:hint="@string/CP"
        android:inputType="text"
        android:padding="4dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        android:hint="@string/city"
        android:inputType="text"
        android:padding="4dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        android:hint="@string/State"
        android:inputType="text"
        android:padding="4dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        android:hint="@string/Country"
        android:inputType="text"
        android:padding="4dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>
