<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_launcher_foreground"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMenu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/icmenu"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bTarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_light"
        android:padding="16dp"
        android:text="@string/card"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/tvTarjeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/tvTarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_gray"
        android:padding="16dp"
        android:text="@string/cardnum"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bTarjeta"
        app:layout_constraintTop_toBottomOf="@id/ivMenu" />

    <TextView
        android:id="@+id/tvChofer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="@string/driver"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/bTarjeta"
        app:layout_constraintTop_toBottomOf="@id/bTarjeta" />

    <TextView
        android:id="@+id/tvNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:text="@string/number"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/bTarjeta"
        app:layout_constraintTop_toBottomOf="@id/tvChofer" />

    <TextView
        android:id="@+id/tvNumero1"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_gray"
        android:padding="16dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/tvTarjeta"
        app:layout_constraintTop_toBottomOf="@id/tvChoferNombre" />

    <TextView
        android:id="@+id/tvChoferNombre"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_gray"
        android:padding="16dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/tvTarjeta"
        app:layout_constraintTop_toBottomOf="@id/tvTarjeta" />

    <TextView
        android:id="@+id/tvTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/bTarjeta"
        app:layout_constraintTop_toBottomOf="@id/tvNumero" />

    <TextView
        android:id="@+id/tvTiempo1"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_gray"
        android:padding="16dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/tvTarjeta"
        app:layout_constraintTop_toBottomOf="@id/tvNumero1" />

    <TextView
        android:id="@+id/tvTarifa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:padding="16dp"
        android:text="@string/rate"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/bTarjeta"
        app:layout_constraintTop_toBottomOf="@id/tvTiempo" />

    <TextView
        android:id="@+id/tvTarifa1"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/border_gray"
        android:padding="16dp"
        android:text="@string/_0_00"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/tvTarjeta"
        app:layout_constraintTop_toBottomOf="@id/tvTiempo1" />

    <TextView
        android:id="@+id/tvDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="@string/destiny"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/bTarjeta"
        app:layout_constraintTop_toBottomOf="@id/tvTarifa" />

    <TextView
        android:id="@+id/tvDestino1"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_gray"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/tvTarjeta"
        app:layout_constraintTop_toBottomOf="@id/tvTarifa1"
        tools:text="Lugar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_light"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/Pay"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDestino"
        app:layout_constraintBottom_toTopOf="@id/clMenu"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bTaxi"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:text="@string/taxi"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bBus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bBus"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:text="@string/bus"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bDespensa"
            app:layout_constraintStart_toEndOf="@id/bTaxi"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bDespensa"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:text="@string/Delivery"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bBus"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>